# blockrun-litellm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
blockrun_litellm/: __init__.py  _adapter.py  logger.py  provider.py  proxy.py
docs/: CUSTOMER-ONBOARDING.md  CUSTOMER-ONBOARDING.zh.md  ENTERPRISE-SLA.zh.md  PROXY-FULL-SETUP.md  PROXY-FULL-SETUP.zh.md  README.md
examples/: custom_callbacks.py  litellm_config.yaml  python_lib.py  raw_openai_sdk.py
tests/: conftest.py  test_adapter.py  test_adapter_media.py  test_adapter_solana.py  test_fingerprint.py  test_logger.py  test_provider.py  test_proxy_anthropic_messages.py  test_proxy_gemini_native.py  test_proxy_media.py  test_proxy_payment_error.py  test_proxy_real_cost.py  test_proxy_videos_api.py  test_real_cost.py  test_reasoning.py  test_responses.py  test_sdk_param_contract.py  test_settlement_status.py  test_stream_real_cost.py  test_stream_tool_calls.py  test_stream_usage.py  test_version_consistency.py
