[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockrun-litellm"
version = "0.4.3"
description = "LiteLLM adapter for BlockRun — call x402-paid AI models via LiteLLM (custom provider or local OpenAI-compatible proxy)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "BlockRun", email = "hello@blockrun.ai" }
]
keywords = ["litellm", "blockrun", "x402", "openai", "llm-proxy", "openrouter", "ai-gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # >=1.4.1: streamed tool calls parse correctly (lenient ChatChunkToolCall;
    # earlier SDKs crashed the stream archive with "'dict' object has no
    # attribute 'delta'"). Bumping the floor past 1.3.0 also means
    # `pip install -U blockrun-litellm` actually pulls the fixed SDK instead of
    # leaving an already-satisfied 1.3.0 in place.
    # NOTE: bump to >=1.4.2 once that ships — it adds the Solana
    # ~/.blockrun/.solana-session auto-load so the sidecar starts without
    # SOLANA_WALLET_KEY (parity with Base).
    "blockrun-llm>=1.4.1",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
# Re-exported here so `pip install 'blockrun-litellm[solana]'` pulls the
# x402 SVM toolchain that SolanaLLMClient needs (x402 SDK + solders).
solana = ["blockrun-llm[solana]>=1.4.1"]
proxy = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
blockrun-litellm-proxy = "blockrun_litellm.proxy:main"

[project.urls]
Homepage = "https://blockrun.ai"
Repository = "https://github.com/BlockRunAI/blockrun-litellm"
Documentation = "https://github.com/BlockRunAI/blockrun-litellm#readme"

[tool.hatch.build.targets.wheel]
packages = ["blockrun_litellm"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
